refactoring some GR computations

--- a/tutorials/Tutorial1 - Kerr geodesics.ipynb
+++ b/tutorials/Tutorial1 - Kerr geodesics.ipynb
@@ -22,8 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-f8vecjxh because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n",
-      "Matplotlib is building the font cache; this may take a moment.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-u_fegs8f because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,19 +37,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-05 10:38:29.746308: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-07-11 09:48:52.169794: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
    "source": [
     "import bhnerf\n",
     "import kgeo\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from bhnerf import constants as consts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e708b0eb-e6ec-4934-b232-509934404ebf",
    "metadata": {},
    "outputs": [
@@ -60,8 +60,8 @@
      "text": [
       "calculating preliminaries...\n",
       "integrating in theta...0.04 s\n",
-      "integrating in r...0.07 s\n",
-      "done!   0.1138148307800293  seconds!\n"
+      "integrating in r...0.05 s\n",
+      "done!   0.10447406768798828  seconds!\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f624bbf2c24b9da135076b63b5f8d7",
+       "model_id": "46d218f25a424e84a30c0e69830b1aa7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,26 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "de2e2d8e-e22b-4321-aff0-ce17555d6848",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result_data = func(*input_data)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Use bhnerf wrapper to retrieve geodesics as an xarray dataset structure. \n",
     "A 64x64 image plane is computed for a given field of view\n",
     "\"\"\"\n",
-    "from bhnerf import constants as consts\n",
-    "\n",
     "spin = 0.3\n",
     "inclination = np.deg2rad(60.0)\n",
     "\n",
@@ -147,23 +136,27 @@
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
     "    beta_range=[-fov_M/2, fov_M/2],\n",
     "    num_alpha=64, num_beta=64, \n",
-    ")\n",
-    "\n",
-    "# Compute doppler boosting factor `g` for a Keplerian velocity field\n",
-    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
-    "geos = bhnerf.emission.compute_keplerian_velocity(geos, Omega)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "649126e7-980f-4852-a9b5-d545dda66c75",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result_data = func(*input_data)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "964e4964847444e6b6e76babefea033a",
+       "model_id": "f6a2e2b22324441387b6376ef5c45238",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65fdf72df8f541d48530977d2ac2864a",
+       "model_id": "092f440c426441fbabdffb89b9303665",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,10 +184,14 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Interactively visualize doppler boosting along the geodesics\n",
+    "Compute doppler boosting factor `g` for a Keplerian velocity field\n",
+    "Interactively visualize doppler boosting `g` along the geodesics\n",
     "\"\"\"\n",
+    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
+    "g = bhnerf.emission.doppler_factor(geos, Omega, fillna=False)\n",
+    "\n",
     "%matplotlib widget\n",
-    "bhnerf.visualization.plot_geodesic_3D(geos.g, geos);"
+    "bhnerf.visualization.plot_geodesic_3D(g, geos);"
    ]
   }
  ],
