--- a/tutorials/Tutorial2 - synthesize ngEHT observations.ipynb
+++ b/tutorials/Tutorial2 - synthesize ngEHT observations.ipynb
@@ -15,10 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-1osz6mtk because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to eht-imaging! v 1.2.2 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-11 10:05:55.707717: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -31,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "162239b3-c374-4710-ba75-f8aa72e7b70d",
    "metadata": {},
    "outputs": [],
@@ -56,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c71740ca-1eff-4521-83c3-8a87b0d429ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d905193837d4bebab964757b58ddd25",
+       "model_id": "94ab7622a76948e1a21322efd0fef71c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,19 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "beaa5c8c-a859-46a5-982e-bdeb01a39bf6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result_data = func(*input_data)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Compute Kerr geodesics (photon trajectories) around the black hole starting at the image plane\n",
@@ -114,20 +128,28 @@
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
     "\n",
-    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
-    "geos = bhnerf.emission.compute_keplerian_velocity(geos, Omega=Omega)"
+    "# Keplerian velocity field \n",
+    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f72f3b4f-9fa7-4e95-aae3-f2b88df74a7e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result_data = func(*input_data)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca92193818b14fb3af1b7a58a45cbc95",
+       "model_id": "a28ea2723f9044f0bffbd8edaa12a4da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,10 +163,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7efc081ccbb0>"
+       "<matplotlib.animation.FuncAnimation at 0x7f9aec10b130>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +181,7 @@
     "nt = 64\n",
     "t_injection = -float(geos.r_o) \n",
     "t_frames = np.linspace(0.0, 40.0*units.min, nt)\n",
-    "image_plane = bhnerf.emission.image_plane_dynamics(emission_0, geos, t_frames, t_injection)\n",
+    "image_plane = bhnerf.emission.image_plane_dynamics(emission_0, geos, Omega, t_frames, t_injection)\n",
     "\n",
     "%matplotlib widget\n",
     "movie_xr = xr.DataArray(image_plane, dims=['t', 'alpha', 'beta'])\n",
@@ -168,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "70414b5b-925f-4c92-aaa5-903a5fa82fa4",
    "metadata": {},
    "outputs": [
@@ -212,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "40b072fb-8e00-4343-a70d-596ec40c7420",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "870ea83609f94b42a6e044e626d159df",
+       "model_id": "b321cc85311048f0bb8855797b007cf9",
        "version_major": 2,
        "version_minor": 0
       },
