--- a/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-smn8fnxx because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-wk1bxomg because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-05 17:00:01.759951: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-07-11 10:10:49.542098: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8f6d6b4b-c62d-41ed-a76c-18ec17c83eb5",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,6 @@
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
     "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
-    "geos = bhnerf.emission.compute_keplerian_velocity(geos, Omega=Omega)\n",
     "t_injection = -float(geos.r_o)\n",
     "\n",
     "# Generate hotspot measurements (see Tutorial2) \n",
@@ -139,14 +138,14 @@
     "psize = fov_rad.value / geos.alpha.size \n",
     "obs_args = {'psize': psize, 'ra': obs_empty.ra, 'dec': obs_empty.dec, 'rf': obs_empty.rf, 'mjd': obs_empty.mjd}\n",
     "t_frames = np.linspace(tstart, tstop, nt)\n",
-    "image_plane = bhnerf.emission.image_plane_dynamics(emission_0, geos, t_frames, t_injection)\n",
+    "image_plane = bhnerf.emission.image_plane_dynamics(emission_0, geos, Omega, t_frames, t_injection)\n",
     "movie = eh.movie.Movie(image_plane, times=t_frames.value, **obs_args)\n",
     "obs = bhnerf.observation.observe_same(movie, obs_empty, ttype='direct', seed=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {},
    "outputs": [
@@ -154,6 +153,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result_data = func(*input_data)\n",
       "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:390: UserWarning: jax.host_count has been renamed to jax.process_count. This alias will eventually be removed; please update your code.\n",
       "  warnings.warn(\n",
       "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:377: UserWarning: jax.host_id has been renamed to jax.process_index. This alias will eventually be removed; please update your code.\n",
@@ -163,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2a22fafa5f84882b82c8f1e4dfef13e",
+       "model_id": "fce7737acf994b97b516cf46dc03b395",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +201,7 @@
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
     "state = bhnerf.network.run_optimization(\n",
-    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, rmax, t_injection,\n",
+    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, t_injection,\n",
     "    batched_args=[dtft_mats, vis_sigma], emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
