--- a/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-wk1bxomg because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-wk_axo8u because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-11 10:10:49.542098: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-08-10 16:20:20.209619: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "# Runing on 2 GPUs\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0,1'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '1,2'"
    ]
   },
   {
@@ -146,9 +146,103 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "da357d5a-6656-439d-9576-0cf9c5b9c558",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jax import numpy as jnp\n",
+    "import optax\n",
+    "def run_optimization(runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, t_injection,\n",
+    "                     batched_args=[], emission_true=None, vis_res=64, log_period=100, save_period=1000):\n",
+    "    \n",
+    "    from tensorboardX import SummaryWriter\n",
+    "    from tqdm.notebook import tqdm\n",
+    "    \n",
+    "    # Logging parameters\n",
+    "    checkpoint_dir = '../checkpoints/{}'.format(runname)\n",
+    "    logdir = '../runs/{}'.format(runname)\n",
+    "    \n",
+    "    # Image rendering arguments\n",
+    "    t_units = t_frames.unit\n",
+    "    coords = jnp.array([geos.x, geos.y, geos.z])\n",
+    "    umu = bhnerf.emission.azimuthal_velocity_vector(geos, Omega)\n",
+    "    g = jnp.array(bhnerf.emission.doppler_factor(geos, umu))\n",
+    "    Omega = jnp.array(Omega)\n",
+    "    dtau = jnp.array(geos.dtau)\n",
+    "    Sigma = jnp.array(geos.Sigma)\n",
+    "    t_start_obs = t_frames[0]\n",
+    "    t_geos = jnp.array(geos.t)\n",
+    "    rmin = geos.r.min().data\n",
+    "    rendering_args = [coords, Omega, g, dtau, Sigma, t_start_obs, t_geos, t_injection, rmin, rmax]\n",
+    "    print('asd')\n",
+    "    # Grid for visualization (no interpolation is added for easy comparison)\n",
+    "    if emission_true is not None:\n",
+    "        vis_coords = np.array(np.meshgrid(np.linspace(emission_true.x[0], emission_true.x[-1], emission_true.shape[0]),\n",
+    "                                          np.linspace(emission_true.y[0], emission_true.y[-1], emission_true.shape[1]),\n",
+    "                                          np.linspace(emission_true.z[0], emission_true.z[-1], emission_true.shape[2]),\n",
+    "                                          indexing='ij'))\n",
+    "    else:\n",
+    "        grid_1d = np.linspace(-rmax, rmax, vis_res)\n",
+    "        vis_coords = np.array(np.meshgrid(grid_1d, grid_1d, grid_1d, indexing='ij'))\n",
+    "\n",
+    "    params = predictor.init(jax.random.PRNGKey(1), t_frames[0], t_units, coords, Omega, t_start_obs, t_geos, t_injection)['params']\n",
+    "    \n",
+    "    tx = optax.adam(learning_rate=optax.polynomial_schedule(hparams['lr_init'], hparams['lr_final'], 1, hparams['num_iters']))\n",
+    "    if 'lr_inject' in hparams.keys():\n",
+    "        tx = optax.chain(\n",
+    "            optax.masked(optax.adam(learning_rate=hparams['lr_inject']), mask=flattened_traversal(lambda path, _: path[-1] == 't_injection')),\n",
+    "            optax.masked(tx, mask=flattened_traversal(lambda path, _: path[-1] != 't_injection')),\n",
+    "        )\n",
+    "        \n",
+    "    state = train_state.TrainState.create(apply_fn=predictor.apply, params=params.unfreeze(), tx=tx)  # TODO(pratul): this unfreeze feels sketchy\n",
+    "\n",
+    "    # Restore saved checkpoint\n",
+    "    # if np.isscalar(save_period): state = checkpoints.restore_checkpoint(checkpoint_dir, state)\n",
+    "    init_step = 1 + state.step\n",
+    "    \n",
+    "    # Replicate state for multiple gpus\n",
+    "    state = flax.jax_utils.replicate(state)\n",
+    "    with SummaryWriter(logdir=logdir) as writer:\n",
+    "        if emission_true is not None: writer.add_images('emission/true', bhnerf.utils.intensity_to_nchw(emission_true), global_step=0)\n",
+    "\n",
+    "        for i in tqdm(range(init_step, init_step + hparams['num_iters']), desc='iteration'):\n",
+    "            print(i)\n",
+    "            batch = np.random.choice(range(len(t_frames)), hparams['batchsize'], replace=False)\n",
+    "            bargs = [shard(arg[batch, ...]) for arg in batched_args]\n",
+    "            loss, state, images = train_pstep(state, *bargs, *rendering_args, t_units)\n",
+    "\n",
+    "            # Log the current state on TensorBoard\n",
+    "            writer.add_scalar('log_loss/train', np.log10(np.mean(loss)), global_step=i)\n",
+    "            if (i == 1) or ((i % log_period) == 0) or (i ==  init_step + hparams['num_iters']):\n",
+    "                current_state = jax.device_get(flax.jax_utils.unreplicate(state))\n",
+    "                emission_grid = state.apply_fn({'params': current_state.params}, t_frames[0], t_units, vis_coords, 0.0, t_start_obs, 0.0, 0.0)\n",
+    "                emission_grid = bhnerf.emission.fill_unsupervised_emission(emission_grid, vis_coords, rmin, rmax)\n",
+    "                writer.add_images('emission/estimate', bhnerf.utils.intensity_to_nchw(emission_grid), global_step=i)\n",
+    "                if 'lr_inject' in hparams.keys(): writer.add_scalar('t_injection', float(current_state.params['t_injection']), global_step=i)\n",
+    "                if emission_true is not None:\n",
+    "                    writer.add_scalar('emission/mse', bhnerf.utils.mse(emission_true.data, emission_grid), global_step=i)\n",
+    "                    writer.add_scalar('emission/psnr', bhnerf.utils.psnr(emission_true.data, emission_grid), global_step=i)\n",
+    "\n",
+    "            # Save checkpoints occasionally\n",
+    "            if np.isscalar(save_period) and ((i % save_period == 0) or (i ==  init_step + hparams['num_iters'])):\n",
+    "                current_state = jax.device_get(flax.jax_utils.unreplicate(state))\n",
+    "                checkpoints.save_checkpoint(checkpoint_dir, current_state, int(i), keep=5)\n",
+    "    return current_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Splitting Observation File into 64 times\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -164,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fce7737acf994b97b516cf46dc03b395",
+       "model_id": "b0b69e353fde457984a93a191d8cac8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,35 +280,36 @@
     "predictor = bhnerf.network.NeRF_Predictor()\n",
     "train_pstep = jax.pmap(bhnerf.network.train_step_eht, \n",
     "                       axis_name='batch', \n",
-    "                       in_axes=(0, 0, 0, None, None, None, None, None, None, None, None, None, None, None, 0, 0), \n",
-    "                       static_broadcasted_argnums=(3))\n",
+    "                       in_axes=(0, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None), \n",
+    "                       static_broadcasted_argnums=(1))\n",
     "\n",
-    "# Observation parameters (padding into matrices) \n",
-    "vis_sigma = bhnerf.observation.padded_obs(obs_empty, 'sigma', fill_value=np.inf)\n",
-    "uv = np.stack((bhnerf.observation.padded_obs(obs_empty, 'u'), bhnerf.observation.padded_obs(obs_empty, 'v')), axis=2)\n",
-    "dtft_mats = np.nan_to_num(np.stack([ftmatrix(psize, geos.alpha.size,  geos.beta.size, uv_t, pulse=ehc.PULSE_DEFAULT) for uv_t in uv]), 0.0)\n",
-    "target = bhnerf.observation.padded_obs(obs, 'vis', fill_value=0.0)\n",
+    "# Observation parameters (split observations into frames)\n",
+    "num_frames = 64\n",
+    "obs_frames = obs.split_obs(t_gather=(tstop-tstart).to('s').value / (num_frames+1))\n",
+    "prior = eh.image.make_square(obs, geos.alpha.size, fov_rad.value)\n",
+    "target, sigma, A = [np.array(out) for out in zip(*[eh.imaging.imager_utils.chisqdata_vis(obs, prior, mask=[]) for obs in obs_frames])]\n",
+    "batched_args = [target, sigma, A, t_frames]\n",
     "\n",
-    "# Run optimization.\n",
+    "# Run optimization\n",
     "# Note: rmax constrains the optimization domain to a radius.\n",
     "rmax = fov_M / 2\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
     "state = bhnerf.network.run_optimization(\n",
-    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, t_injection,\n",
-    "    batched_args=[dtft_mats, vis_sigma], emission_true=emission_0, save_period=hparams['num_iters'])"
+    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, \n",
+    "    t_injection, batched_args, emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26116399b1ca4187bcb1aebfc44d8117",
+       "model_id": "eb3e736d807b4381b255f019f2ec16d1",
        "version_major": 2,
        "version_minor": 0
       },
