closure phase optimization

--- a/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-wk_axo8u because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-hu2w0o_k because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-10 16:20:20.209619: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-08-11 13:57:09.466433: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0b69e353fde457984a93a191d8cac8b",
+       "model_id": "77ddfa81b6244ef294b6be601a2a468b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,8 +193,8 @@
     "predictor = bhnerf.network.NeRF_Predictor()\n",
     "train_pstep = jax.pmap(bhnerf.network.train_step_eht, \n",
     "                       axis_name='batch', \n",
-    "                       in_axes=(0, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None), \n",
-    "                       static_broadcasted_argnums=(1))\n",
+    "                       in_axes=(0, None, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None), \n",
+    "                       static_broadcasted_argnums=(1, 2))\n",
     "\n",
     "# Observation parameters (split observations into frames)\n",
     "num_frames = 64\n",
@@ -210,19 +210,19 @@
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
     "state = bhnerf.network.run_optimization(\n",
     "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, \n",
-    "    t_injection, batched_args, emission_true=emission_0, save_period=hparams['num_iters'])"
+    "    t_injection, batched_args, non_jit_args=['vis'], emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb3e736d807b4381b255f019f2ec16d1",
+       "model_id": "cf5cf7c5222544b3831004256bf532d9",
        "version_major": 2,
        "version_minor": 0
       },
