--- a/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
@@ -259,9 +259,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
