support for polarization - not debugged

--- a/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-hu2w0o_k because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-0f7_e_ju because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-11 13:57:09.466433: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-09-26 13:53:55.084137: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
     "tstop = tstart + 40.0 * units.min   # observation stop time\n",
     "\n",
     "# Compute geodesics (see Tutorial1)\n",
-    "geos = bhnerf.emission.kerr_geodesics(\n",
+    "geos = bhnerf.kgeo.image_plane_geos(\n",
     "    spin, inclination, \n",
     "    num_alpha=64, num_beta=64, \n",
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77ddfa81b6244ef294b6be601a2a468b",
+       "model_id": "73d6e44a1f474d1e9b69d570762f629a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,7 +193,7 @@
     "predictor = bhnerf.network.NeRF_Predictor()\n",
     "train_pstep = jax.pmap(bhnerf.network.train_step_eht, \n",
     "                       axis_name='batch', \n",
-    "                       in_axes=(0, None, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None), \n",
+    "                       in_axes=(0, None, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None, None), \n",
     "                       static_broadcasted_argnums=(1, 2))\n",
     "\n",
     "# Observation parameters (split observations into frames)\n",
@@ -209,20 +209,20 @@
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
     "state = bhnerf.network.run_optimization(\n",
-    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, \n",
-    "    t_injection, batched_args, non_jit_args=['vis'], emission_true=emission_0, save_period=hparams['num_iters'])"
+    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, t_injection,\n",
+    "    batched_args=batched_args, non_jit_args=['vis'], emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf5cf7c5222544b3831004256bf532d9",
+       "model_id": "b6daff6a61b54d749fade2db5932994e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
