polarization recovery works with image-plane observations

--- a/tutorials/Tutorial4 - estimate 3D emission from complex visibilities.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from complex visibilities.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Tutorial3: estimate 3D emission from observations\n",
+    "# Tutorial4: estimate 3D emission from complex visibilities\n",
     "\n",
     "---\n",
     "This tutorial demonstrates the recovery of 3D emission from synthetic observations. Complex visibilities are used to fit the parameters of a coordinate-based neural network (NeRF)."
@@ -92,7 +92,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Generate synthetic observations of a hot-spot to serve as ground-truth comparison \n",
+    "Generate synthetic observations of a hot-spot\n",
     "\"\"\"\n",
     "spin = 0.2\n",
     "inclination = np.deg2rad(60.0)\n",
