--- a/tutorials/Tutorial2 - synthesize ngEHT observations.ipynb
+++ b/tutorials/Tutorial2 - synthesize ngEHT observations.ipynb
@@ -90,10 +90,9 @@
     "\"\"\"\n",
     "import ipyvolume as ipv\n",
     "\n",
-    "extent = [(-fov_M/2, fov_M/2) for dim in ('x', 'y', 'z')]\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
-    "ipv.volshow(emission_0, extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "ipv.volshow(emission_0, extent=[(-fov_M/2, fov_M/2)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "ipv.show()"
    ]
   },
@@ -291,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
