--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -15,10 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-cdjuy_kl because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to eht-imaging! v 1.2.2 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-27 10:51:11.237824: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+     ]
+    }
+   ],
    "source": [
     "import bhnerf\n",
     "import kgeo\n",
@@ -38,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8f6d6b4b-c62d-41ed-a76c-18ec17c83eb5",
    "metadata": {},
    "outputs": [
@@ -68,7 +91,7 @@
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
-    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
+    "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "t_injection = -float(geos.r_o)\n",
     "\n",
     "emission_0 = bhnerf.emission.generate_hotspot_xr(\n",
@@ -85,9 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -104,12 +129,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baf9942ab69e4fc88b9fb09098577baa",
+       "model_id": "82015eb702024199a83b24763b585b66",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "iteration:   0%|          | 0/5000 [00:00<?, ?it/s]"
+       "iteration:   0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -129,27 +154,27 @@
     "                       in_axes=(0, None, 0, 0, None, None, None, None, None, None, None, None, None, None, None),\n",
     "                       static_broadcasted_argnums=(1))\n",
     "\n",
-    "batched_args = [image_plane, t_frames]\n",
+    "batched_args = bhnerf.optimization.TemporalBatchedArgs.train_step_image(t_frames, image_plane)\n",
     "\n",
     "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
     "rmax = fov_M / 2\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
-    "state = bhnerf.network.run_optimization(\n",
-    "    runname, hparams, predictor, train_pstep, image_plane, t_frames, geos, Omega, rmax, t_injection,\n",
-    "    batched_args=batched_args, emission_true=emission_0, save_period=hparams['num_iters'])"
+    "state = bhnerf.optimization.run(\n",
+    "    runname, hparams, predictor, train_pstep, geos, Omega, rmax, t_injection, batched_args, \n",
+    "    emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6daff6a61b54d749fade2db5932994e",
+       "model_id": "534ca4e6f3c34cf0beebb1fbd5c8128d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,21 +192,21 @@
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
     "import ipyvolume as ipv\n",
-    "vis_coords = np.array(np.meshgrid(np.linspace(emission_0.x[0], emission_0.x[-1], emission_0.shape[0]),\n",
-    "                                  np.linspace(emission_0.y[0], emission_0.y[-1], emission_0.shape[1]),\n",
-    "                                  np.linspace(emission_0.z[0], emission_0.z[-1], emission_0.shape[2]),\n",
-    "                                  indexing='ij'))\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(state, t_frames[0], t_frames[0], float(geos.r.min()), rmax, fov=fov_M)\n",
     "\n",
-    "# Get the a gridded convereged solution from the neural network\n",
-    "emission_estimate = state.apply_fn({'params': state.params}, tstart, tstart.unit, vis_coords, 0.0, tstart, 0.0, 0.0)\n",
-    "emission_estimate =  bhnerf.emission.fill_unsupervised_emission(emission_estimate, vis_coords, geos.r.min().data, rmax)\n",
-    "   \n",
-    "extent = [(float(emission_0[dim].min()), float(emission_0[dim].max())) for dim in ('x', 'y', 'z')]\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
-    "ipv.volshow(emission_estimate, extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "ipv.volshow(emission_estimate, extent=[(-fov_M/2, fov_M/2)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "ipv.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70ce0213-14a6-4564-8b2b-301f6888adf6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
