--- a/tutorials/Tutorial4 - estimate 3D emission from complex visibilities.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from complex visibilities.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-0f7_e_ju because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-xx4gqdxn because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-26 13:53:55.084137: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-09-27 12:05:11.199632: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
     "    alpha_range=[-fov_M/2, fov_M/2],\n",
     "    beta_range=[-fov_M/2, fov_M/2]\n",
     ")\n",
-    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
+    "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "t_injection = -float(geos.r_o)\n",
     "\n",
     "# Generate hotspot measurements (see Tutorial2) \n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73d6e44a1f474d1e9b69d570762f629a",
+       "model_id": "64f83fe4fcd44e909e3b049758e47b29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,16 +201,15 @@
     "obs_frames = obs.split_obs(t_gather=(tstop-tstart).to('s').value / (num_frames+1))\n",
     "prior = eh.image.make_square(obs, geos.alpha.size, fov_rad.value)\n",
     "target, sigma, A = [np.array(out) for out in zip(*[eh.imaging.imager_utils.chisqdata_vis(obs, prior, mask=[]) for obs in obs_frames])]\n",
-    "batched_args = [target, sigma, A, t_frames]\n",
+    "batched_args = bhnerf.optimization.TemporalBatchedArgs.train_step_eht(t_frames, target, sigma, A)\n",
     "\n",
-    "# Run optimization\n",
-    "# Note: rmax constrains the optimization domain to a radius.\n",
+    "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
     "rmax = fov_M / 2\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
-    "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
-    "state = bhnerf.network.run_optimization(\n",
-    "    runname, hparams, predictor, train_pstep, target, t_frames, geos, Omega, rmax, t_injection,\n",
-    "    batched_args=batched_args, non_jit_args=['vis'], emission_true=emission_0, save_period=hparams['num_iters'])"
+    "runname = 'tutorial4/recovery.vis.{}'.format(current_time)\n",
+    "state = bhnerf.optimization.run(\n",
+    "    runname, hparams, predictor, train_pstep, geos, Omega, rmax, t_injection, batched_args, \n",
+    "    dtype='vis', emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
@@ -240,19 +239,11 @@
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
     "import ipyvolume as ipv\n",
-    "vis_coords = np.array(np.meshgrid(np.linspace(emission_0.x[0], emission_0.x[-1], emission_0.shape[0]),\n",
-    "                                  np.linspace(emission_0.y[0], emission_0.y[-1], emission_0.shape[1]),\n",
-    "                                  np.linspace(emission_0.z[0], emission_0.z[-1], emission_0.shape[2]),\n",
-    "                                  indexing='ij'))\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(state, t_frames[0], t_frames[0], float(geos.r.min()), rmax, fov=fov_M)\n",
     "\n",
-    "# Get the a gridded convereged solution from the neural network\n",
-    "emission_estimate = state.apply_fn({'params': state.params}, tstart, tstart.unit, vis_coords, 0.0, tstart, 0.0, 0.0)\n",
-    "emission_estimate =  bhnerf.emission.fill_unsupervised_emission(emission_estimate, vis_coords, geos.r.min().data, rmax)\n",
-    "   \n",
-    "extent = [(float(emission_0[dim].min()), float(emission_0[dim].max())) for dim in ('x', 'y', 'z')]\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
-    "ipv.volshow(emission_estimate, extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "ipv.volshow(emission_estimate, extent=[(-fov_M/2, fov_M/2)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "ipv.show()"
    ]
   }
