Polarized optimization works in image/cphase, changed loss to the sum of squared errors

--- a/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
@@ -7,10 +7,10 @@
     "tags": []
    },
    "source": [
-    "# Tutorial4: estimate 3D emission from complex visibilities\n",
+    "# Tutorial4: estimate 3D emission from EHT observations\n",
     "\n",
     "---\n",
-    "This tutorial demonstrates the recovery of 3D emission from synthetic observations. Complex visibilities are used to fit the parameters of a coordinate-based neural network (NeRF)."
+    "This tutorial demonstrates the recovery of 3D emission from synthetic observations. Complex visibilities or closure phases are used to fit the parameters of a coordinate-based neural network (NeRF)."
    ]
   },
   {
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-xx4gqdxn because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-zrmemqxx because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-27 12:05:11.199632: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-09-29 17:21:27.404483: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {},
    "outputs": [
@@ -171,12 +171,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64f83fe4fcd44e909e3b049758e47b29",
+       "model_id": "f390c21b01b641b1a342c0b7985cded8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "iteration:   0%|          | 0/5000 [00:00<?, ?it/s]"
+       "iteration:   0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -196,12 +196,9 @@
     "                       in_axes=(0, None, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None, None), \n",
     "                       static_broadcasted_argnums=(1, 2))\n",
     "\n",
-    "# Observation parameters (split observations into frames)\n",
-    "num_frames = 64\n",
-    "obs_frames = obs.split_obs(t_gather=(tstop-tstart).to('s').value / (num_frames+1))\n",
-    "prior = eh.image.make_square(obs, geos.alpha.size, fov_rad.value)\n",
-    "target, sigma, A = [np.array(out) for out in zip(*[eh.imaging.imager_utils.chisqdata_vis(obs, prior, mask=[]) for obs in obs_frames])]\n",
-    "batched_args = bhnerf.optimization.TemporalBatchedArgs.train_step_eht(t_frames, target, sigma, A)\n",
+    "# Observation parameters \n",
+    "chisqdata = eh.imaging.imager_utils.chisqdata_vis\n",
+    "batched_args = bhnerf.optimization.TemporalBatchedArgs.train_step_eht(t_frames, obs, movie.fovx(), movie.xdim, chisqdata)\n",
     "\n",
     "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
     "rmax = fov_M / 2\n",
@@ -209,19 +206,19 @@
     "runname = 'tutorial4/recovery.vis.{}'.format(current_time)\n",
     "state = bhnerf.optimization.run(\n",
     "    runname, hparams, predictor, train_pstep, geos, Omega, rmax, t_injection, batched_args, \n",
-    "    dtype='vis', emission_true=emission_0, save_period=hparams['num_iters'])"
+    "    emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6daff6a61b54d749fade2db5932994e",
+       "model_id": "ceb1bcbbab724233af96052b72c39874",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,11 +232,11 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Visualization the recovered 3D emission\n",
+    "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
     "import ipyvolume as ipv\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(state, t_frames[0], t_frames[0], float(geos.r.min()), rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, float(geos.r.min()), rmax, fov=fov_M)\n",
     "\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
