--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-cdjuy_kl because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-zld22ehc because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-27 10:51:11.237824: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-09-29 17:25:58.772345: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {
     "tags": []
@@ -129,12 +129,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82015eb702024199a83b24763b585b66",
+       "model_id": "5426a794c39b4dbcbb3ad0cde31b0385",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "iteration:   0%|          | 0/100 [00:00<?, ?it/s]"
+       "iteration:   0%|          | 0/5000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -160,6 +160,7 @@
     "rmax = fov_M / 2\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
+    "runname = 'pol/test5555'\n",
     "state = bhnerf.optimization.run(\n",
     "    runname, hparams, predictor, train_pstep, geos, Omega, rmax, t_injection, batched_args, \n",
     "    emission_true=emission_0, save_period=hparams['num_iters'])"
@@ -188,25 +189,17 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Visualization the recovered 3D emission\n",
+    "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
     "import ipyvolume as ipv\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(state, t_frames[0], t_frames[0], float(geos.r.min()), rmax, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(state.apply_fn, state.params, float(geos.r.min()), rmax, fov=fov_M)\n",
     "\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
     "ipv.volshow(emission_estimate, extent=[(-fov_M/2, fov_M/2)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "ipv.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70ce0213-14a6-4564-8b2b-301f6888adf6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
