--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-zld22ehc because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-0q609sa6 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-29 17:25:58.772345: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-11-16 16:16:03.772882: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c522963e-d4c8-4381-a320-a58a2e68bbae",
    "metadata": {
     "tags": []
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5426a794c39b4dbcbb3ad0cde31b0385",
+       "model_id": "657fcb3f50c942c1b363122a3385335b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,33 +149,26 @@
     "\"\"\"\n",
     "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'batchsize': 6}\n",
     "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "train_pstep = jax.pmap(bhnerf.network.train_step_image, \n",
-    "                       axis_name='batch', \n",
-    "                       in_axes=(0, None, 0, 0, None, None, None, None, None, None, None, None, None, None, None),\n",
-    "                       static_broadcasted_argnums=(1))\n",
-    "\n",
-    "batched_args = bhnerf.optimization.TemporalBatchedArgs.train_step_image(t_frames, image_plane)\n",
+    "train_step = bhnerf.optimization.TrainStep.image(t_frames, image_plane) \n",
     "\n",
     "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
     "rmax = fov_M / 2\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial3/recovery.{}'.format(current_time)\n",
-    "runname = 'pol/test5555'\n",
-    "state = bhnerf.optimization.run(\n",
-    "    runname, hparams, predictor, train_pstep, geos, Omega, rmax, t_injection, batched_args, \n",
-    "    emission_true=emission_0, save_period=hparams['num_iters'])"
+    "state = bhnerf.optimization.run(runname, hparams, predictor, train_step, geos, Omega, rmax, t_injection,  \n",
+    "                                emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "534ca4e6f3c34cf0beebb1fbd5c8128d",
+       "model_id": "a8e356bef7eb4803a62416c60cc2d6da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +190,7 @@
     "\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
-    "ipv.volshow(emission_estimate, extent=[(-fov_M/2, fov_M/2)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "ipv.volshow(emission_estimate, extent=[(-rmax, rmax)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "ipv.show()"
    ]
   }
