--- a/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-zrmemqxx because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-nmlb2jmf because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-29 17:21:27.404483: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-11-16 16:29:03.681448: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -46,8 +46,6 @@
     "import bhnerf\n",
     "import kgeo\n",
     "import ehtim as eh\n",
-    "from ehtim.observing.obs_helpers import ftmatrix\n",
-    "import ehtim.const_def as ehc\n",
     "import bhnerf.constants as consts\n",
     "from astropy import units\n",
     "import jax\n",
@@ -171,12 +169,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f390c21b01b641b1a342c0b7985cded8",
+       "model_id": "20df5b00871f4bd3adc4d56583c552d6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "iteration:   0%|          | 0/100 [00:00<?, ?it/s]"
+       "iteration:   0%|          | 0/5000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -191,34 +189,29 @@
     "\"\"\"\n",
     "hparams = {'num_iters': 5000, 'lr_init': 1e-4, 'lr_final': 1e-6, 'batchsize': 6}\n",
     "predictor = bhnerf.network.NeRF_Predictor()\n",
-    "train_pstep = jax.pmap(bhnerf.network.train_step_eht, \n",
-    "                       axis_name='batch', \n",
-    "                       in_axes=(0, None, None, 0, 0, 0, 0, None, None, None, None, None, None, None, None, None, None, None), \n",
-    "                       static_broadcasted_argnums=(1, 2))\n",
     "\n",
     "# Observation parameters \n",
     "chisqdata = eh.imaging.imager_utils.chisqdata_vis\n",
-    "batched_args = bhnerf.optimization.TemporalBatchedArgs.train_step_eht(t_frames, obs, movie.fovx(), movie.xdim, chisqdata)\n",
+    "train_step = bhnerf.optimization.TrainStep.eht(t_frames, obs, movie.fovx(), movie.xdim, chisqdata)\n",
     "\n",
     "# Run optimization. Note: rmax constrains the optimization domain to a radius.\n",
     "rmax = fov_M / 2\n",
     "current_time = datetime.now().strftime('%Y-%m-%d.%H:%M:%S')\n",
     "runname = 'tutorial4/recovery.vis.{}'.format(current_time)\n",
-    "state = bhnerf.optimization.run(\n",
-    "    runname, hparams, predictor, train_pstep, geos, Omega, rmax, t_injection, batched_args, \n",
-    "    emission_true=emission_0, save_period=hparams['num_iters'])"
+    "state = bhnerf.optimization.run(runname, hparams, predictor, train_step, geos, Omega, rmax, t_injection,  \n",
+    "                                emission_true=emission_0, save_period=hparams['num_iters'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ceb1bcbbab724233af96052b72c39874",
+       "model_id": "153ab9ad19a240a3b18fda09acc8cfeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +233,7 @@
     "\n",
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
-    "ipv.volshow(emission_estimate, extent=[(-fov_M/2, fov_M/2)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "ipv.volshow(emission_estimate, extent=[(-rmax, rmax)]*3, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "ipv.show()"
    ]
   }
