optimization with bg noisy fields

--- a/notebooks/Polarized synchrotron radiation for simple geometries (Gelles2021).ipynb
+++ b/notebooks/Polarized synchrotron radiation for simple geometries (Gelles2021).ipynb
@@ -50,6 +50,7 @@
    "id": "641acd60-48c7-40c4-a9dd-ef261ba798f0",
    "metadata": {
     "heading_collapsed": "true",
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1248,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
